--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
 
 body {
     font-family: 'Cuprum', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000;
     /* font-family: 'PT Sans', sans-serif; */
 }
 
@@ -11,6 +14,45 @@ body {
     margin: 0 auto;
     padding: 0 10px;
     width: 960px;
+}
+
+.hidden {
+    display: none;
+}
+
+/* ======== Btn-red ================= */
+.btn-red {
+    display: block;
+    width: 253px;
+    padding: 11px 0 11px;
+    font-size: 14px;
+    color: #ffffff;
+    background-color: #ee3643;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 3px;
+    transition: all 0.2s linear;
+}
+
+.btn-red:hover,
+.btn-red:focus {
+    background-color: #ca2c37;
+}
+
+.btn-red:active {
+    background-color: #ba2732;
+}
+
+/* ======== New-flag ================= */
+.new-flag {
+    background: url(../img/popular-goods/new_flag_copy.png) no-repeat;
+    width: 60px;
+    height: 59px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
 }
 
 /* ======== Header ================= */
@@ -77,7 +119,7 @@ body {
 
 .header-top__item:active {
     background-color: #161d29;
-    opacity: 0.6;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .header-top__bookmark {
@@ -100,7 +142,6 @@ body {
 
 .header-top__order:active {
     background-color: #518534;
-    opacity: 0.5;
 }
 
 .header-top__basket_active {
@@ -114,7 +155,6 @@ body {
 
 .header-top__basket_active:active {
     background-color: #930610;
-    opacity: 1;
 }
 
 .header-content {
@@ -130,7 +170,6 @@ body {
 .header-content__text {
     margin-left: 52px;
     width: 200px;
-    font-size: 16px;
     font-weight: normal;
     font-style: italic;
     color: #ee3643;
@@ -154,7 +193,6 @@ body {
 .header-content__address {
     margin: 7px 0 0 9px;
     font-size: 14px;
-    font-weight: 400;
     color: #32425c;
 }
 
@@ -165,44 +203,33 @@ body {
     list-style: none;
 }
 
-.user-list__btn {
-    padding: 11px 0 10px 21px;
-    width: 121px;
+.user-list__link {
+    display: block;
     font-size: 21px;
-    font-weight: 400;
     color: #000000;
     background-color: #ffffff;
-    border: none;
-    outline: none;
-    cursor: pointer;
+    text-decoration: none;
     transition: all 0.1s linear;
 }
 
-.user-list__link {
-    display: block;
+.user-list__log {
+    padding: 11px 0 10px 21px;
+    width: 121px;
+}
+
+.user-list__reg {
     margin-left: 10px;
     padding: 11px 0 10px 23px;
     width: 150px;
-    font-size: 21px;
-    font-weight: 400;
-    color: #000000;
-    text-decoration: none;
-    background-color: #ffffff;
-    transition: all 0.1s linear;
 }
 
-.user-list__btn:hover,
-.user-list__btn:focus,
 .user-list__link:hover,
 .user-list__link:focus {
     color: #ee3643;
 }
 
-/* Тут opacity: 0.3; как то не так работает изменяет background-color */
-/* Или тут цвет проще поменять */
-.user-list__btn:active,
 .user-list__link:active {
-    opacity: 0.3;
+    color: rgba(0, 0, 0, 0.3);
 }
 
 .user-block {
@@ -221,17 +248,14 @@ body {
 }
 
 .user-block__name:active {
-    /* Тут так же  фон меняеться */
-    opacity: 0.3;
+    color: rgba(0, 0, 0, 0.3);
 }
-
 
 .user-block__links {
     margin-left: 15px;
 }
 
 .user-block__link {
-    font-size: 16px;
     color: #32425c;
     transition: all 0.2s linear;
 }
@@ -242,21 +266,17 @@ body {
 }
 
 .user-block__link:active {
-    color: #32425c;
-    opacity: 0.3;
+    color: rgba(50, 60, 92, 0.3);
 }
-
 
 .user-block__link:first-child {
     margin-right: 28px;
 }
 
-
 .main-nav {
     padding: 23px 0 60px 0;
     background-color: #f3f7f8;
 }
-
 
 .main-nav__list {
     display: flex;
@@ -272,7 +292,6 @@ body {
     display: block;
     padding: 19px 31px 17px 31px;
     font-size: 17px;
-    font-weight: 400;
     color: #ffffff;
     text-decoration: none;
 }
@@ -284,10 +303,119 @@ body {
 
 .main-nav__link:hover:active {
     background-color: #1d2739;
-    opacity: 0.5;
+    color: rgba(255, 255, 255, 0.3);
+}
+
+/* ======== Features ================= */
+.features {
+    padding: 61px 0 32px 0;
+}
+
+.features__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features__left {
+    width: 620px;
+}
+
+.features__wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features__item {
+    margin-bottom: 20px;
+    padding: 22px 0 21px 24px;
+    width: 300px;
+    position: relative;
+}
+
+.features__item_yelow {
+    background-color: #ffbf47;
+}
+
+.features__item_blue {
+    background-color: #3bbce3;
+}
+
+.features__item_violet {
+    background-color: #dc91d8;
+}
+
+.features__item_green {
+    background-color: #8ed78f;
+}
+
+.features__item_dark-yelow {
+    background-color: #ffc047;
+}
+
+.features__title{
+    margin: 0 0 15px 0;
+    font-size: 24px;
+    color: #ffffff;
+}
+
+.features__link {
+    display: block;
+    width: 135px;
+    padding: 11px 0;
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+}
+
+.slider__item {
+    padding: 21px 0 0 25px; 
+    min-height: 266px;
+    background: url(../img/features/slide2.jpg) no-repeat;
+    background-size: cover;
+}
+
+.slider__title {
+    margin: 0;
+    font-size: 36px;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.slider__text {
+    margin: 0;
+    margin-top: 2px;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.slider__link {
+    margin-top: 122px;
+    width: 195px;
 }
 
 /* ======== Popular-goods ================= */
+.section-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    align-items: center;
+    background-color: #f9f5f0;
+}
+
+.section-header__title {
+    margin: 27px 0 27px 30px;
+    font-size: 30px;
+    color: #32425c;
+    text-transform: uppercase;
+}
+
+.section-header__link {
+    margin-right: 24px;
+}
 
 .goods-list {
     display: flex;
@@ -310,21 +438,10 @@ body {
     transition: all 0.2s linear;
 }
 
-.new-flag {
-    background: url(../img/popular-goods/new_flag_copy.png) no-repeat;
-    width: 60px;
-    height: 59px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 100;
-}
-
 .goods-list__title {
     margin: 5px auto 11px;
     width: 160px;
     font-size: 18px;
-    color: #000000;
 }
 
 .goods-list__oldPrice {
@@ -371,8 +488,7 @@ body {
 }
 
 .goods-list__item:hover {
-    /* Не знаю как правильно тень посмотреть */
-    box-shadow: 0 10px 20px 5px #c0c0c0;
+    box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
     border: 0;
 }
 
@@ -424,32 +540,154 @@ body {
 }
 
 .goods-list__bookmark:active {
-    opacity: 0.3;
+    color: rgba(50, 66, 92, 0.3);
+    border: 3px #c1c6ce solid;
 }
 
+/* ======== Popular-manufacturer ================= */
+.manufacturer-list {
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    margin: 24px 0 0 0;
+    padding: 0;
+    list-style: none;
+}
+
+.manufacturer-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 220px;
+    min-height: 145px;
+    border: 1px #eaeaea solid;
+    transition: all 0.2s linear;
+}
+
+.manufacturer-list__item:hover,
+.manufacturer-list__item:focus {
+    box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
+    border: 0;
+}
+
+.manufacturer-list__item:active {
+    box-shadow: 0 4px 10px rgba(41, 52, 73, 0.5);
+    border: 0;
+}
+
+.manufacturer-list__item:active .manufacturer-list__img {
+    opacity: 0.3;
+}
 
 
 /* ======== About-perforator ================= */
 .about-perforator {
     padding: 39px 0 57px 0;
     background-color: #f2f6f8;
-    color: #000000;
 }
 
 .about-perforator__title {
     margin-top: 22px;
     margin-bottom: 22px;
     font-size: 30px;
-    font-weight: 400;
 }
 
 .about-perforator__text {
     font-size: 13px;
-    font-weight: 400;
     font-family: 'PT Sans', sans-serif;
     line-height: 24px;
 }
 
+/* ======== Advantage ================= */
+.advantage {
+    background-color: #f4f8f9;
+}
+
+
+/* ======== information ================= */
+.information {
+    padding-top: 70px;
+    padding-bottom: 86px;
+}
+
+.information__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.information-contant__title {
+    margin-bottom: 22px;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.information-contant__text {
+    margin-bottom: 24px;
+    width: 530px;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+}
+
+.information-contant__text_width {
+    margin-bottom: 23px;
+    font-family: 'PT Sans', sans-serif;
+    width: 390px;
+}
+
+.transport-list {
+    margin: 0 0 36px 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 20px;
+    list-style: none;
+}
+
+.transport-list__item {
+    margin-bottom: 20px;
+    margin-left: 36px;
+    position: relative;
+}
+
+.transport-list__item::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: -37px;
+    width: 26px;
+    height: 2px;
+    background: #ee3643;
+}
+
+.information-contant__link {
+    width: 220px;
+}
+
+.information-contact {
+    width: 300px;
+}
+
+.information-contact__title {
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.information-contact__text {
+    margin-bottom: 31px;
+    width: 180px;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+}
+
+.information-contact__link {
+    margin-top: 35px;
+    width: 300px;
+}
 
 /* ======== Footer ================= */
 .footer {
@@ -492,7 +730,6 @@ body {
     padding: 0;
     width: 547px;
     font-size: 18px;
-    font-weight: 400;
     list-style: none;
 }
 
@@ -542,8 +779,6 @@ body {
 .footer-bottom__copyright {
     max-width: 240px;
     margin: 0;
-    font-size: 16px;
-    font-weight: 400;
     color: #fff;
 }
 
@@ -602,14 +837,10 @@ body {
 .list-info__text {
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 16px;
-    font-weight: 400;
     color: #ffffff;
 }
 
 .list-info__link {
-    font-size: 16px;
-    font-weight: 400;
     color: #ffd180;
     text-decoration: none;
     transition: text-decoration .2s linear;
