--- a/css/style.css
+++ b/css/style.css
@@ -1371,15 +1371,97 @@ a {
 }
 
 /* ======== Write-us============ */
+.write-us {
+    position: relative;
 
+    /* display: none; */
+    width: 620px;
+    /* маржин потом убрать! */
+    margin-bottom: 100px;
+    
+    border-top: 7px solid #ff5257;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.write-us__inner {
+    padding-top: 31px;
+    padding-right: 80px;
+    padding-left: 80px;
+}
+  
+.write-us__items {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.write-us__item {
+    width: 220px;
+}
+
+.write-us__title {
+    margin-bottom: 8px;
+
+    font-size: 18px;
+    font-weight: 400;
+    color: #000000;
+}
+
+.write-us__input,
+.write-us__textarea {
+    width: 100%;
+
+    font-family: 'PT Sans', sans-serif;
+    font-size: 13px;
+    color: #a9a9a9;
+
+    border: 2px solid #dee3e4;
+    border-radius: 3px;
+}
+
+.write-us__input {
+    padding-top: 9px;
+    padding-bottom: 10px;
+    padding-left: 12px;
+}
+
+.write-us__textarea {
+    min-height: 113px;
+    margin-top: 1px;
+    margin-bottom: 34px;
+    padding-top: 10px;
+    padding-left: 12px;
+    
+    resize: none;
+}
+
+.btn-send__wrapper {
+    padding-top: 36px;
+    padding-bottom: 38px;
+
+    background-color: #f4f4f4;
+}
+
+.btn-send {
+    width: 460px;
+    margin: 0 auto;
+}
+
+.write-us .btn-close {
+    position: absolute;
+    top: 9px;
+    right: 10px;
+}
 
 /* ======== Map ================= */
 .map {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    right: 24.8%;
+    right: 24.8%; */
 
-    display: none;
+    /* display: none; */
+    /* маржин потом убрать! */
+    margin-bottom: 100px;
 }
 
 .map__inner {
@@ -1394,10 +1476,10 @@ a {
     display: block;
 }
 
-.map__btn-close {
+.map .btn-close {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 9px;
+    right: 10px;
 }
 
 /* ================================================= Catalog =========================== */
