--- a/css/style.css
+++ b/css/style.css
@@ -1372,35 +1372,44 @@ a {
 
 /* ======== Write-us============ */
 .write-us {
-    position: relative;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     /* display: none; */
+
+    background-color: #ffffff;
+}
+
+.write-us__form {
+    position: relative;
+
     width: 620px;
-    /* маржин потом убрать! */
-    margin-bottom: 100px;
     
     border-top: 7px solid #ff5257;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
 }
 
 .write-us__inner {
-    padding-top: 31px;
+    padding-top: 45px;
     padding-right: 80px;
     padding-left: 80px;
 }
   
-.write-us__items {
+.write-us__labels {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-.write-us__item {
+.write-us__label {
     width: 220px;
 }
 
-.write-us__title {
-    margin-bottom: 8px;
+.write-us__label span {
+    display: block;
+    margin-bottom: 9px;
 
     font-size: 18px;
     font-weight: 400;
@@ -1420,23 +1429,23 @@ a {
 }
 
 .write-us__input {
-    padding-top: 9px;
-    padding-bottom: 10px;
-    padding-left: 12px;
+    padding-top: 8px;
+    padding-bottom: 12px;
+    padding-left: 14px;
 }
 
 .write-us__textarea {
     min-height: 113px;
-    margin-top: 1px;
+    margin-top: -1px;
     margin-bottom: 34px;
     padding-top: 10px;
-    padding-left: 12px;
+    padding-left: 14px;
     
     resize: none;
 }
 
 .btn-send__wrapper {
-    padding-top: 36px;
+    padding-top: 37px;
     padding-bottom: 38px;
 
     background-color: #f4f4f4;
@@ -1445,23 +1454,30 @@ a {
 .btn-send {
     width: 460px;
     margin: 0 auto;
+
+    border: none;
+    cursor: pointer;
 }
 
-.write-us .btn-close {
+.write-us__form .btn-close {
     position: absolute;
     top: 9px;
-    right: 10px;
+    right: 3px;
+
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 /* ======== Map ================= */
 .map {
-    /* position: absolute;
+    position: fixed;
     top: 50%;
-    right: 24.8%; */
+    left: 50%;
 
-    /* display: none; */
-    /* маржин потом убрать! */
-    margin-bottom: 100px;
+    display: none;
+
+    transform: translate(-50%, -50%);
 }
 
 .map__inner {
@@ -1480,6 +1496,10 @@ a {
     position: absolute;
     top: 9px;
     right: 10px;
+
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 /* ================================================= Catalog =========================== */
