--- a/css/style.css
+++ b/css/style.css
@@ -1375,10 +1375,11 @@ a {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    z-index: 1000;
 
     /* display: none; */
 
+    transform: translate(-50%, -50%);
     background-color: #ffffff;
 }
 
@@ -1474,6 +1475,7 @@ a {
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 1000;
 
     display: none;
 
